--- a/My first coding project.html
+++ b/My first coding project.html
@@ -4,7 +4,7 @@
 	<title>Fenny's first page</title>
 </head>
 <body>
-	<h1>This is the beginning of my first hand-written web page, or called it Big Heading</h1>
+	<h1>This is the beginning of my first hand-written web page, called it Big Heading.</h1>
 	<p>This is the where <b>paragraph</b> is created.</p>
 	<a href="https://www.instagram.com/fennyprastiyo/" target="_blank" title="Let's go!">This link will show you who I am</a>
 	<br>
